<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/adnetwork_tv01"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/connetpc" />

        <EditText
            android:id="@+id/adnetwork_et01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/adnetwork_tv02"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/username" />

        <EditText
            android:id="@+id/adnetwork_et02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/adnetwork_tv03"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/password" />

        <EditText
            android:id="@+id/adnetwork_et03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/adnetwork_tv04"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/itemname" />

        <EditText
            android:id="@+id/adnetwork_et04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </LinearLayout>

</LinearLayout>